# BreezeAgentFramework

./: .gitignore  README.md  README_NEW.md  main.py  pyproject.toml  requirements.txt  sample_users.db
_vibe/: Breeze_manual.md  PRD.md
agentic_breeze/: __init__.py  app.py
agentic_breeze/agents/: __init__.py  orchestrator.py
agentic_breeze/agents/orchestrator_core/: conversation_manager.py  planning_manager.py  synthesis_generator.py  tool_executor.py
agentic_breeze/agents/orchestrator_core/modle/: execution_plan.py
agentic_breeze/agents/orchestrator_core/orchestrator_core/: query_rewriter.py
agentic_breeze/agents/orchestrator_core/orchestrator_core/modle/: execution_plan.py
agentic_breeze/agents/orchestrator_core/orchestrator_core/tools/: api_tool.py
agentic_breeze/agents/orchestrator_core/tools/: api_tool.py  sqlite_tool.py  weather.py  wiki_tool.py
agentic_breeze/cli/: main.py
agentic_breeze/llm/: breeze_client.py  llm_client.py
agentic_breeze/prompts/: prompt_manager.py
agentic_breeze/registry/: tool_registry.py
src/: app.py
src/agents/: orchestrator.py
src/agents/orchestrator_core/: conversation_manager.py  planning_manager.py  query_rewriter.py  synthesis_generator.py  tool_executor.py
src/agents/orchestrator_core/tools/: plan_tool.py  wiki_tool.py
src/llm/: breeze_client.py  llm_client.py
src/llm/llm_server/: invoke_api.py  readme.md  requirements.txt  run_breeze_vllm_server.sh
src/prompts/: prompt.json  prompt_manager.py
src/registry/: tool_registry.py
