[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-breeze"
version = "1.0.0"
authors = [
    {name = "Breeze Agent Team"},
]
description = "Breeze Agent Framework - 智慧助理框架"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["ai", "agent", "assistant", "framework", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mtkresearch>=0.3.2",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "requests>=2.25.0",
    "pydantic>=2.0.0",
    "asyncio",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/breeze-agent"
Documentation = "https://github.com/your-org/breeze-agent#readme"
Repository = "https://github.com/your-org/breeze-agent.git"
Issues = "https://github.com/your-org/breeze-agent/issues"

[project.scripts]
breeze = "agentic_breeze.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_breeze*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"agentic_breeze.prompts" = ["*.json"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''